--- a/Algoritmos de Teste/e_restrito.ipynb
+++ b/Algoritmos de Teste/e_restrito.ipynb
@@ -368,49 +368,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Para o epsilon: 35, temos a seguinte solução:\n",
-      "Solução: [3.8793075  2.9556707  0.         0.         0.         0.71244714]\n",
-      "O valor de f2 é: 36.39053596\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -7.758401622\n",
-      "Para o epsilon: 45, temos a seguinte solução:\n",
-      "Solução: [4.0389729  2.63634    0.4162338  0.         0.         0.45584998]\n",
-      "O valor de f2 é: 45.000000019999995\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -8.004095524\n",
-      "Para o epsilon: 55, temos a seguinte solução:\n",
-      "Solução: [4.2244261  2.2654334  0.89969456 0.         0.         0.15780918]\n",
-      "O valor de f2 é: 54.99999974\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -8.289471956\n",
-      "Para o epsilon: 65, temos a seguinte solução:\n",
-      "Solução: [3.6824899 2.5418719 1.2888491 0.        0.        0.       ]\n",
-      "O valor de f2 é: 65.0000004\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -8.7135692\n",
-      "Para o epsilon: 75, temos a seguinte solução:\n",
-      "Solução: [2.3219884 3.546798  1.5718764 0.        0.        0.       ]\n",
-      "O valor de f2 é: 75.0\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -9.2937752\n",
-      "Para o epsilon: 85, temos a seguinte solução:\n",
-      "Solução: [1.6937326 3.755392  1.9106826 0.        0.        0.       ]\n",
-      "O valor de f2 é: 85.000001\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -9.8936819\n",
-      "Para o epsilon: 95, temos a seguinte solução:\n",
-      "Solução: [2.2139051 2.7150469 2.3369703 0.        0.        0.       ]\n",
-      "O valor de f2 é: 94.99999940000001\n",
-      "status: 1, Optimal\n",
-      "Objetivo: -10.5244861\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'for i in range(len(eps)):\\n    print(f\"Para o epsilon: {eps[i]}, temos a seguinte solução:\")\\n    e_restrito(n,A,b,C,d,coeficientes_fun_pri,num_funcao_restricao,matriz_coeficientes_f_aux,np.array([eps[i]]))'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -418,8 +387,8 @@
     "\n",
     "n=6\n",
     "A = np.array([[216,164,456,516,176,670],[28,14,0,0,5,0],[2,8,0,0,0,0],[166,167,205,209,236,228],[2,2,8,12,8,13]])\n",
-    "d=np.array([1800,100,25,1300,22])\n",
-    "C = A\n",
+    "g=np.array([1800,100,25,1300,22])\n",
+    "G = A\n",
     "#d=np.array([100,22,1500,25,1800])\n",
     "b = np.array([2500,150,36,2300,29])\n",
     "coeficientes_fun_pri=np.array([-0.8,-0.9,-2.7,-4,-6.5,-2.8])\n",
@@ -427,9 +396,294 @@
     "matriz_coeficientes_f_aux = np.array([[3,5,32,32,15,14]])\n",
     "eps = [35,45,55,65,75,85,95]\n",
     "\n",
-    "for i in range(len(eps)):\n",
+    "\"\"\"for i in range(len(eps)):\n",
     "    print(f\"Para o epsilon: {eps[i]}, temos a seguinte solução:\")\n",
-    "    e_restrito(n,A,b,C,d,coeficientes_fun_pri,num_funcao_restricao,matriz_coeficientes_f_aux,np.array([eps[i]]))"
+    "    e_restrito(n,A,b,C,d,coeficientes_fun_pri,num_funcao_restricao,matriz_coeficientes_f_aux,np.array([eps[i]]))\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def e_restrito(n=0, A=0, b=0, G=0,g=0, E=0, e=0, coeficientes_fun_pri=0, num_funcao_restricao=0, matriz_coeficientes_f_aux=0, epsilons=0):\n",
+    "    model = LpProblem(name=\"large-problem\", sense=LpMaximize)\n",
+    "    # Neste trabalho será tratado apenas dos casos lineares com variáveis reais\n",
+    "\n",
+    "    x = [LpVariable(name=f\"x{i}\", lowBound=0) for i in range(n)]\n",
+    "    \n",
+    "    # Adicionando restrições <=\n",
+    "    if isinstance(A, (list, np.ndarray)) and isinstance(b, (list, np.ndarray)):\n",
+    "        for i in range(len(A)):\n",
+    "            model += (lpDot(A[i], x) <= b[i], f\"restrição_<=_{i}\")\n",
+    "\n",
+    "    # Adicionando restrições >=\n",
+    "    if isinstance(G, (list, np.ndarray)) and isinstance(g, (list, np.ndarray)):\n",
+    "        for i in range(len(G)):\n",
+    "            model += (lpDot(G[i], x) >= g[i], f\"restrição_>=_{i}\")\n",
+    "\n",
+    "    # Adicionando restrições ==\n",
+    "    if isinstance(E, (list, np.ndarray)) and isinstance(e, (list, np.ndarray)):\n",
+    "        for i in range(len(E)):\n",
+    "            model += (lpDot(E[i], x) == e[i], f\"restrição_==_{i}\")\n",
+    "\n",
+    "    # Função Objetivo Principal\n",
+    "    funcao_principal = lpDot(coeficientes_fun_pri, x)\n",
+    "    model += funcao_principal\n",
+    "\n",
+    "    # Adicionando restrições epsilon\n",
+    "    for i in range(num_funcao_restricao):\n",
+    "        model += (lpDot(matriz_coeficientes_f_aux[i], x) >= epsilons[i], f\"restrição_eps_{i}\")\n",
+    "\n",
+    "    # Resolvendo o problema\n",
+    "    status = model.solve()\n",
+    "    \n",
+    "    # Extraindo e exibindo a solução\n",
+    "    sol = np.array([x[i].varValue for i in range(n)])\n",
+    "    #print(f\"Solução: {sol}\")\n",
+    "    \n",
+    "    # Calculando os valores das funções objetivo auxiliares\n",
+    "    value_func_aux = np.zeros(num_funcao_restricao)\n",
+    "    for i in range(num_funcao_restricao):\n",
+    "        value_func_aux[i] = np.dot(matriz_coeficientes_f_aux[i], sol)\n",
+    "        \n",
+    "    #for i in range(num_funcao_restricao):\n",
+    "    #    print(f\"O valor de f{i+2} é: {value_func_aux[i]}\")\n",
+    "    #\n",
+    "    #print(f\"Status: {LpStatus[model.status]}\")\n",
+    "    #print(f\"Objetivo: {model.objective.value()}\")\n",
+    "    return sol,status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pulp import LpMaximize, LpProblem, LpStatus, lpSum, LpVariable,lpDot\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def varrer_epsilons(n=0, A=0, b=0, G=0, g=0, E=0, e=0, coeficientes_fun_pri=0, num_funcao_restricao=0, matriz_coeficientes_f_aux=0, epsilon_range=None):\n",
+    "    solutions = []\n",
+    "    \n",
+    "    for epsilon in epsilon_range:\n",
+    "        epsilons = np.full(num_funcao_restricao, epsilon)  # Cria um vetor de epsilons com o valor atual\n",
+    "        sol, status = e_restrito(n, A, b, G, g, E, e, coeficientes_fun_pri, num_funcao_restricao, matriz_coeficientes_f_aux, epsilons)\n",
+    "\n",
+    "        if status == 1:  # 1 indica 'Optimal'\n",
+    "            solutions.append(tuple(np.round(sol, decimals=6)))  # Armazena a solução arredondada\n",
+    "        else:\n",
+    "            print(\"Sem Solução!\")\n",
+    "\n",
+    "    # Remover duplicatas\n",
+    "    solutions_distinct = list(set(solutions))\n",
+    "    \n",
+    "    return solutions_distinct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solução distinta: (80.0, 20.0, 0.0, 0.0, 50.0, 100.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "n = 6\n",
+    "A = np.array([\n",
+    "    [1, 1, 1, 0, 0, 0],  # x1A + x1B + x1C <= 100\n",
+    "    [0, 0, 0, 1, 1, 1]   # x2A + x2B + x2C <= 150\n",
+    "])\n",
+    "b = np.array([100, 150])\n",
+    "\n",
+    "G = np.array([\n",
+    "    [1, 0, 0, 1, 0, 0],  # x1A + x2A >= 80\n",
+    "    [0, 1, 0, 0, 1, 0],  # x1B + x2B >= 70\n",
+    "    [0, 0, 1, 0, 0, 1]   # x1C + x2C >= 100\n",
+    "])\n",
+    "g = np.array([80, 70, 100])\n",
+    "\n",
+    "E = 0\n",
+    "e = 0\n",
+    "\n",
+    "coeficientes_fun_pri = np.array([9, 4, 1, 2, 5, 8])\n",
+    "\n",
+    "num_funcao_restricao = 1\n",
+    "matriz_coeficientes_f_aux = np.array([\n",
+    "    [-2, -4, -5, -3, -1, -2]   # Coeficientes da função auxiliar\n",
+    "])\n",
+    "\n",
+    "# Intervalo de valores de epsilon para explorar\n",
+    "epsilon_range = np.linspace(-3000, -2000, 500)\n",
+    "\n",
+    "# Executando a varredura de epsilons\n",
+    "solucoes_distintas = varrer_epsilons(n, A, b, G, g, E, e, coeficientes_fun_pri, num_funcao_restricao, matriz_coeficientes_f_aux, epsilon_range)\n",
+    "\n",
+    "# Exibindo as soluções distintas\n",
+    "for sol in solucoes_distintas:\n",
+    "    print(f\"Solução distinta: {sol}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solução distinta: (2.328804, 3.541763, 1.570458, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.126125, 2.462036, 0.643431, 0.0, 0.0, 0.315789)\n",
+      "Solução distinta: (4.179642, 2.355001, 0.782947, 0.0, 0.0, 0.229781)\n",
+      "Solução distinta: (4.253229, 2.207828, 0.974781, 0.0, 0.0, 0.11152)\n",
+      "Solução distinta: (3.972262, 2.769762, 0.242324, 0.0, 0.0, 0.563061)\n",
+      "Solução distinta: (2.672338, 3.288014, 1.498993, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.230652, 3.614263, 1.590877, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.052538, 2.60921, 0.451597, 0.0, 0.0, 0.434049)\n",
+      "Solução distinta: (3.898675, 2.916936, 0.050489, 0.0, 0.0, 0.681322)\n",
+      "Solução distinta: (3.938813, 2.836659, 0.155126, 0.0, 0.0, 0.616816)\n",
+      "Solução distinta: (1.73989, 3.976761, 1.692971, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.574186, 3.360514, 1.519411, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.426957, 3.469264, 1.55004, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.079297, 2.555692, 0.521355, 0.0, 0.0, 0.391046)\n",
+      "Solução distinta: (4.306747, 2.100792, 1.114297, 0.0, 0.0, 0.025513)\n",
+      "Solução distinta: (3.064948, 2.998016, 1.417317, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.186332, 2.341622, 0.800386, 0.0, 0.0, 0.21903)\n",
+      "Solução distinta: (3.905365, 2.903556, 0.067929, 0.0, 0.0, 0.670571)\n",
+      "Solução distinta: (2.034347, 3.759262, 1.631715, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.046472, 2.273019, 1.213129, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.966795, 3.070515, 1.437736, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.377881, 3.505514, 1.560249, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.279988, 2.15431, 1.044539, 0.0, 0.0, 0.068516)\n",
+      "Solução distinta: (3.212176, 2.889266, 1.386689, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.00571, 2.702865, 0.329521, 0.0, 0.0, 0.509306)\n",
+      "Solução distinta: (4.144624, 2.200519, 1.19271, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.912054, 2.890177, 0.085368, 0.0, 0.0, 0.65982)\n",
+      "Solução distinta: (4.246539, 2.221207, 0.957342, 0.0, 0.0, 0.122271)\n",
+      "Solução distinta: (4.300057, 2.114172, 1.096857, 0.0, 0.0, 0.036263)\n",
+      "Solução distinta: (4.172953, 2.36838, 0.765508, 0.0, 0.0, 0.240532)\n",
+      "Solução distinta: (4.291853, 2.09177, 1.162082, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.952193, 2.8099, 0.190005, 0.0, 0.0, 0.595314)\n",
+      "Solução distinta: (2.819567, 3.179265, 1.468364, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.721414, 3.251765, 1.488783, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (1.887119, 3.868012, 1.662343, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.310329, 2.816766, 1.36627, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.879308, 2.955671, 0.0, 0.0, 0.0, 0.712447)\n",
+      "Solução distinta: (4.132815, 2.448657, 0.660871, 0.0, 0.0, 0.305038)\n",
+      "Solução distinta: (4.01909, 2.676106, 0.3644, 0.0, 0.0, 0.487804)\n",
+      "Solução distinta: (2.868643, 3.143015, 1.458155, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.083423, 3.723012, 1.621505, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.106056, 2.502174, 0.591113, 0.0, 0.0, 0.348042)\n",
+      "Solução distinta: (3.801091, 2.454268, 1.264176, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.146194, 2.421898, 0.69575, 0.0, 0.0, 0.283536)\n",
+      "Solução distinta: (4.206401, 2.301484, 0.852705, 0.0, 0.0, 0.186777)\n",
+      "Solução distinta: (4.099366, 2.515554, 0.573673, 0.0, 0.0, 0.358793)\n",
+      "Solução distinta: (3.1631, 2.925516, 1.396899, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.408481, 2.744267, 1.345852, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.925434, 2.863418, 0.120247, 0.0, 0.0, 0.638318)\n",
+      "Solução distinta: (4.313436, 2.087413, 1.131736, 0.0, 0.0, 0.014762)\n",
+      "Solução distinta: (2.525109, 3.396764, 1.529621, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.992331, 2.729624, 0.294642, 0.0, 0.0, 0.530808)\n",
+      "Solução distinta: (4.032469, 2.649348, 0.399279, 0.0, 0.0, 0.466302)\n",
+      "Solução distinta: (1.690814, 4.013011, 1.703181, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.457557, 2.708017, 1.335642, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.22647, 2.261345, 0.905023, 0.0, 0.0, 0.154524)\n",
+      "Solução distinta: (2.476033, 3.433014, 1.53983, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.199711, 2.314863, 0.835265, 0.0, 0.0, 0.197528)\n",
+      "Solução distinta: (3.899243, 2.381768, 1.243758, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.152883, 2.408519, 0.713189, 0.0, 0.0, 0.272785)\n",
+      "Solução distinta: (2.623262, 3.324264, 1.509202, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.065918, 2.582451, 0.486476, 0.0, 0.0, 0.412547)\n",
+      "Solução distinta: (2.181576, 3.650513, 1.601087, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.266608, 2.181069, 1.00966, 0.0, 0.0, 0.090018)\n",
+      "Solução distinta: (3.752015, 2.490518, 1.274386, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.948319, 2.345519, 1.233548, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (1.936195, 3.831762, 1.652134, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.506634, 2.671767, 1.325433, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.112745, 2.488795, 0.608552, 0.0, 0.0, 0.337291)\n",
+      "Solução distinta: (4.23985, 2.234586, 0.939902, 0.0, 0.0, 0.133022)\n",
+      "Solução distinta: (4.159573, 2.395139, 0.730629, 0.0, 0.0, 0.262034)\n",
+      "Solução distinta: (4.072607, 2.569071, 0.503916, 0.0, 0.0, 0.401796)\n",
+      "Solução distinta: (3.985641, 2.743004, 0.277202, 0.0, 0.0, 0.541559)\n",
+      "Solução distinta: (3.978951, 2.756383, 0.259763, 0.0, 0.0, 0.55231)\n",
+      "Solução distinta: (3.99902, 2.716245, 0.312081, 0.0, 0.0, 0.520057)\n",
+      "Solução distinta: (4.045848, 2.622589, 0.434158, 0.0, 0.0, 0.4448)\n",
+      "Solução distinta: (3.653862, 2.563018, 1.294805, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.932124, 2.850039, 0.137687, 0.0, 0.0, 0.627567)\n",
+      "Solução distinta: (4.095548, 2.236769, 1.20292, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.139504, 2.435277, 0.67831, 0.0, 0.0, 0.294287)\n",
+      "Solução distinta: (1.985271, 3.795512, 1.641924, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.958882, 2.796521, 0.207445, 0.0, 0.0, 0.584563)\n",
+      "Solução distinta: (4.23316, 2.247966, 0.922463, 0.0, 0.0, 0.143773)\n",
+      "Solução distinta: (3.850167, 2.418018, 1.253967, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.025779, 2.662727, 0.381839, 0.0, 0.0, 0.477053)\n",
+      "Solução distinta: (3.945503, 2.82328, 0.172566, 0.0, 0.0, 0.606065)\n",
+      "Solução distinta: (2.917719, 3.106765, 1.447946, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.55571, 2.635517, 1.315223, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (2.1325, 3.686763, 1.611296, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.119435, 2.475416, 0.625992, 0.0, 0.0, 0.32654)\n",
+      "Solução distinta: (4.092676, 2.528933, 0.556234, 0.0, 0.0, 0.369544)\n",
+      "Solução distinta: (2.279728, 3.578013, 1.580668, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.965572, 2.783142, 0.224884, 0.0, 0.0, 0.573812)\n",
+      "Solução distinta: (4.286678, 2.140931, 1.061978, 0.0, 0.0, 0.057765)\n",
+      "Solução distinta: (3.359405, 2.780517, 1.356061, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.1937, 2.164269, 1.182501, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.997396, 2.309269, 1.223339, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.261252, 2.853016, 1.37648, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.166263, 2.38176, 0.748068, 0.0, 0.0, 0.251283)\n",
+      "Solução distinta: (2.77049, 3.215515, 1.478574, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.213091, 2.288104, 0.870144, 0.0, 0.0, 0.176026)\n",
+      "Solução distinta: (4.273298, 2.16769, 1.0271, 0.0, 0.0, 0.079267)\n",
+      "Solução distinta: (3.702938, 2.526768, 1.284595, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.885296, 2.943694, 0.015611, 0.0, 0.0, 0.702824)\n",
+      "Solução distinta: (4.320126, 2.074034, 1.149176, 0.0, 0.0, 0.004011)\n",
+      "Solução distinta: (1.641738, 4.049261, 1.71339, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.039159, 2.635968, 0.416718, 0.0, 0.0, 0.455551)\n",
+      "Solução distinta: (3.114024, 2.961766, 1.407108, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.293367, 2.127551, 1.079418, 0.0, 0.0, 0.047014)\n",
+      "Solução distinta: (4.21978, 2.274725, 0.887584, 0.0, 0.0, 0.165275)\n",
+      "Solução distinta: (1.838042, 3.904262, 1.672552, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (3.891985, 2.930315, 0.03305, 0.0, 0.0, 0.692073)\n",
+      "Solução distinta: (3.918744, 2.876798, 0.102808, 0.0, 0.0, 0.649069)\n",
+      "Solução distinta: (3.604786, 2.599268, 1.305014, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.242777, 2.12802, 1.172292, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.259919, 2.194448, 0.992221, 0.0, 0.0, 0.100769)\n",
+      "Solução distinta: (4.193022, 2.328242, 0.817826, 0.0, 0.0, 0.208279)\n",
+      "Solução distinta: (4.059228, 2.59583, 0.469037, 0.0, 0.0, 0.423298)\n",
+      "Solução distinta: (4.0124, 2.689486, 0.34696, 0.0, 0.0, 0.498555)\n",
+      "Solução distinta: (1.788966, 3.940512, 1.682762, 0.0, 0.0, 0.0)\n",
+      "Solução distinta: (4.085987, 2.542313, 0.538794, 0.0, 0.0, 0.380295)\n",
+      "Solução distinta: (3.015871, 3.034266, 1.427527, 0.0, 0.0, 0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "epsilon_range = np.linspace(-100, 80, 500)\n",
+    "\n",
+    "# Executando a varredura de epsilons\n",
+    "solucoes_distintas = varrer_epsilons(n, A, b, G, g, E, e, coeficientes_fun_pri, num_funcao_restricao, matriz_coeficientes_f_aux, epsilon_range)\n",
+    "\n",
+    "# Exibindo as soluções distintas\n",
+    "for sol in solucoes_distintas:\n",
+    "    print(f\"Solução distinta: {sol}\")"
    ]
   }
  ],
